# Project1-CUDA-Flocking

./: .gitignore  CMakeLists.txt  INSTRUCTION.md  Performance Data Collection.xlsx  README.md  benchmark.py  charts.xlsx  data.txt  p3_writeup.md  perf-analyze.csv  run_linux.sh
data/: blocksize.xlsx  blocksize_coherent.csv  blocksize_naive.csv  blocksize_uniform.csv  cellwidth.xlsx  cellwidth_detailed.csv  cellwidth_single.csv  charts.xlsx  data.csv  data3celldist.txt  data_numBlocks.txt  data_numObjects.csv  particles.xlsx  particles_coherent.csv  particles_naive.csv  particles_uniform.csv  processed_data.csv  sharedmemory.csv  sharedmemory.xlsx
data/coherent_grid/128_block_size/100000_boids/: FrameView_Summary.csv
data/coherent_grid/128_block_size/125000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T011637_Log.csv
data/coherent_grid/128_block_size/150000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T011706_Log.csv
data/coherent_grid/128_block_size/175000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T011736_Log.csv
data/coherent_grid/128_block_size/200000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T011808_Log.csv
data/coherent_grid/128_block_size/50000_boids/: FrameView_Summary.csv
data/coherent_grid/128_block_size/75000_boids/: FrameView_Summary.csv
data/coherent_grid/256_block_size/50000_boids/: FrameView_Summary.csv
data/coherent_grid/32_block_size/50000_boids/: FrameView_Summary.csv
data/coherent_grid/512_block_size/50000_boids/: FrameView_Summary.csv
data/coherent_grid/64_block_size/50000_boids/: FrameView_Summary.csv
data/naive/128_block_size/100000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T012114_Log.csv
data/naive/128_block_size/125000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T012147_Log.csv
data/naive/128_block_size/150000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T012221_Log.csv
data/naive/128_block_size/175000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T012320_Log.csv
data/naive/128_block_size/200000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T012354_Log.csv
data/naive/128_block_size/50000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T012015_Log.csv
data/naive/128_block_size/75000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T012043_Log.csv
data/naive/256_block_size/50000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T211312_Log.csv
data/naive/32_block_size/50000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T211151_Log.csv
data/naive/512_block_size/50000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T211356_Log.csv
data/naive/64_block_size/50000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T211231_Log.csv
data/uniform_grid/128_block_size/27_neighbors/100000_boids/: FrameView_Summary.csv
data/uniform_grid/128_block_size/27_neighbors/125000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T145254_Log.csv
data/uniform_grid/128_block_size/27_neighbors/150000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T145328_Log.csv
data/uniform_grid/128_block_size/27_neighbors/175000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T145400_Log.csv
data/uniform_grid/128_block_size/27_neighbors/200000_boids/: FrameView_Summary.csv  FrameView_cis5650_boids.exe_2025_08_31T145432_Log.csv
data/uniform_grid/128_block_size/27_neighbors/50000_boids/: FrameView_Summary.csv
data/uniform_grid/256_block_size/50000_boids/: FrameView_Summary.csv
data/uniform_grid/32_block_size/50000_boids/: FrameView_Summary.csv
data/uniform_grid/512_block_size/50000_boids/: FrameView_Summary.csv
data/uniform_grid/64_block_size/50000_boids/: FrameView_Summary.csv
plots/: plots.py
plotting/: 2v3_plotting.py  numblocks_plotting.py  plotting.py
profiles/: profile_sheet.ods
reports/: performance_analysis.xlsx
scripts/: graph1.py  graph2.py  graph3.py  measure_fps.py  measurements.json  plot_fps.py
src/: boidImpl.cu  boidImpl.h  kernel.cu  kernel.h  main.cpp  main.hpp  utilityCore.hpp
(+15 files in other folders)
